tests/cases/compiler/ClassDeclaration9/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/ClassDeclaration9.ts`, Apache-2.0 License

class C {
  foo(); //~ ERROR: Function implementation is missing or not immediately following the declaration.
}